# mneme

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
k8s/: deployment.yaml
mneme/: cli.py
mneme/api/: server.py
mneme/core/: detector.py  ioc.py  parser.py  plugins.py
scripts/: validate_dump.py
tests/fixtures/: windows.psscan.json  windows.pstree.json
tests/integration/: test_real_dump.py
tests/unit/: test_detector.py  test_parser.py  test_timeline_ioc.py
