[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mneme-dfir"
version = "0.1.0"
description = "Mneme — memory forensics toolkit. Orchestrates Volatility3, detects malware, builds timelines, ships ECS."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "sltcnb" }]
keywords = ["dfir", "forensics", "memory", "volatility3", "incident-response", "malware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/sltcnb/Madeleine"
Repository = "https://github.com/sltcnb/Madeleine"
Issues = "https://github.com/sltcnb/Madeleine/issues"

[project.optional-dependencies]
vol = ["volatility3>=2.5.0"]
yara = ["yara-python>=4.3.0"]
web = ["fastapi>=0.109.0", "uvicorn>=0.27.0", "python-multipart", "aiofiles"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
mneme = "mneme.cli:cli"

[tool.setuptools.packages.find]
include = ["mneme*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests needing Volatility3 + a real dump (opt-in)",
]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["B008"]  # click uses callables as option defaults

[tool.ruff.lint.per-file-ignores]
"mneme/core/report.py" = ["E501"]  # inline CSS/HTML lines
"mneme/api/server.py" = ["E501"]   # inline CSS/HTML lines
